--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   padding: 20px;
   color: blue;
   border: 2px solid black;
-  height: 200px;
+  height: 250px;
   width: 200px;
 }
 
@@ -13,4 +13,5 @@ input {
 form {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
