--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
+body {
+  margin: 0px;
+}
+
 .card {
-  padding: 20px;
-  color: blue;
-  border: 2px solid black;
+  padding: 10px;
+  color: #355070;
+  border: 2px solid #6d597a;
+  margin: 10px;
   height: 225px;
   width: 200px;
 }
 
 input {
-  flex: auto;
+  margin-left: auto;
   width: 100px;
 }
 
@@ -21,4 +26,52 @@ label{
   display: flex;
   padding: 10px;
   align-items: center;
+}
+
+#sectionHeaders {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 24px;
+}
+
+.sectionHeader {
+  padding: 10px;
+  color: #355070;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1; 
+}
+
+#header {
+  padding: 15px;
+  border-bottom: solid 2px black;
+  background-color: #6d597a;
+  color: white;
+  font-size: 36px;
+
+  display: flex;
+  align-items: center;
+}
+
+#add_card {
+  margin-left: auto;
+}
+
+button {
+  background-color: #eaac8b;
+  height: 50px;
+  width: 50px;
+  font-size: 30px;
+  color: #b56576;
+}
+
+.section {
+  border: 2px solid black;
+  height: 50px;
+  width: 50px;
+  margin-top: 10px;
+
+  display: flex;
 }
