--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,6 @@ body {
   margin: 0px;
 }
 
-.card {
-  padding: 10px;
-  color: #355070;
-  border: 2px solid #6d597a;
-  margin: 10px;
-  height: 225px;
-  width: 200px;
-}
-
 input {
   margin-left: auto;
   width: 100px;
@@ -22,26 +13,42 @@ form {
   align-items: flex-start;
 }
 
+#card {
+  padding: 10px;
+  color: #355070;
+  border: 2px solid #6d597a;
+  margin: 10px;
+  height: 225px;
+  width: 200px;
+  font-size: 14px;
+}
+
 label{
   display: flex;
   padding: 10px;
   align-items: center;
 }
 
-#sectionHeaders {
+.sections {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+
   font-size: 24px;
 }
 
-.sectionHeader {
+.sectionHeaders {
   padding: 10px;
   color: #355070;
 
   display: flex;
+  justify-content: space-evenly;
+  flex-basis: 100%;
+}
+
+.sectionContent {
+  display: flex;
   flex-direction: column;
-  align-items: center;
-  flex: 1; 
+  justify-content: space-evenly;
 }
 
 #header {
@@ -68,10 +75,15 @@ button {
 }
 
 .section {
-  border: 2px solid black;
   height: 50px;
   width: 50px;
   margin-top: 10px;
 
   display: flex;
+}
+
+.section.applied {
+  width: 500px;
+  height: 500px;
+  border: 2px solid black;
 }
