--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ label{
   align-items: center;
 }
 
-#header {
+#sectionHeader {
   padding: 15px;
   border-bottom: solid 2px black;
   background-color: #6d597a;
@@ -46,7 +46,7 @@ label{
   padding: 15px;
 }
 
-.sectionHeader {
+.header {
   width: 300px; 
 
   display: flex; 
