--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,19 @@ body {
   margin: 0px;
 }
 
+.card {
+  padding: 10px;
+  color: #355070;
+  
+  border: 2px solid #d3d3d3;
+  border-top-color: #6d597a;
+  margin: 10px;
+  height: 200px;
+  width: 175px;
+  font-size: 14px;
+}
+
+
 input {
   margin-left: auto;
   width: 100px;
@@ -13,10 +26,24 @@ form {
   align-items: flex-start;
 }
 
+.form_layout {
+  display: flex;
+}
+
 label{
   display: flex;
-  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 5px;
   align-items: center;
+
+}
+
+.icons {
+  width: 25px;
+  height: 100%px;
+  padding: 10px;
 }
 
 #sectionHeader {
@@ -79,16 +106,6 @@ button {
   flex-direction: column;
   align-items: center;
   flex: 0 0 300px;
-}
-
-.card {
-  padding: 10px;
-  color: #355070;
-  border: 2px solid #6d597a;
-  margin: 10px;
-  height: 225px;
-  width: 200px;
-  font-size: 14px;
 }
 
 #deletecard {
