most recent version

--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,34 @@ button {
   justify-content: center;
   align-items: center;
 }
+.input-container {
+  position:relative;
+  display: inline-block;
+}
+
+.tooltip {
+  display: none;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
