--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,26 @@
 body {
   margin: 0px;
+  background-color:#D8F3F5;
+  width: 115%;
+}
+
+div {
+  font-family: 'Comfortaa', cursive;
 }
 
 .card {
   padding: 10px;
   color: #355070;
+  background-color: white;
   
-  border: 2px solid #d3d3d3;
-  border-top-color: #6d597a;
+  border: 1px solid #d4a8a1;
+  border-top: 5px solid #d1cfe2;
   margin: 10px;
   height: 200px;
   width: 175px;
   font-size: 14px;
+
+  cursor: grab;
 }
 
 
@@ -28,6 +37,7 @@ form {
 
 .form_layout {
   display: flex;
+  align-items: center;
 }
 
 label{
@@ -44,17 +54,36 @@ label{
   width: 25px;
   height: 100%px;
   padding: 10px;
+
+  align-items: center;
+}
+
+#mainHeader {
+  display:flex;
+  background-color: #b8e0d2;
+  width: 150%;
+}
+
+#headerContent {
+  position: sticky;
+  left: 0;
+
+  display: flex;
 }
 
 #sectionHeader {
   padding: 15px;
-  border-bottom: solid 2px black;
-  background-color: #6d597a;
-  color: white;
+  color: #4a6153;
   font-size: 36px;
 
   display: flex;
   align-items: center;
+}
+
+#headerIcon {
+  height: 50px;
+  width: 50px;
+  padding: 10px;
 }
 
 #sections {
@@ -69,8 +98,8 @@ label{
 #sectionHeaders {
   display:flex; 
 
-  color: #355070;
-  padding: 15px;
+  color: #567BA8;
+  padding: 30px;
 }
 
 .header {
@@ -88,12 +117,16 @@ label{
 }
 
 button {
-  background-color: #eaac8b;
   height: 30px;
   width: 30px;
   margin-left: 20px;
   font-size: 24px;
-  color: #b56576;
+  color: #d4a8a1;
+
+  border: 1px solid #d4a8a1;
+  background-color: #FFEEE6;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .content {
@@ -141,4 +174,18 @@ button {
   opacity: 0;
 
   pointer-events: none;
+}
+
+.content.applied {
+  padding-left: 30px;
+}
+
+#footer {
+  height: 50px;
+  background-color: white;
+
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
