--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
   width: 115%;
 }
 
-div {
+div, input {
   font-family: 'Comfortaa', cursive;
 }
 
@@ -27,6 +27,7 @@ div {
 input {
   margin-left: auto;
   width: 100px;
+  font-size: 10px;
 }
 
 form {
@@ -51,9 +52,9 @@ label{
 }
 
 .icons {
-  width: 25px;
-  height: 100%px;
-  padding: 10px;
+  width: 100%;
+  height: 35px;
+  padding: 5px;
 
   align-items: center;
 }
@@ -182,10 +183,15 @@ button {
 
 #footer {
   height: 50px;
-  background-color: white;
+  background-color: #b8e0d2;
+  color: #4a6153;
 
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
