--- a/src/App.css
+++ b/src/App.css
@@ -83,8 +83,9 @@ label{
   display:flex;
   background-color: #b8e0d2;
   width: 150%;
+  height: 70px;
 
-  position: sticky;
+  position: fixed;
   left: 0px;
   top: 0px;
 }
@@ -110,13 +111,13 @@ label{
 
 #sectionHeader {
   background-color: #D8F3F5;
-  border-bottom: 1px solid #567BA8;
+  padding-top: 70px;
 
   display: flex;
   flex-direction: column;
 
   width: 150%;
-  overflow-x: auto;
+  height: 70px;
 }
 
 #sectionHeaders {
@@ -127,6 +128,7 @@ label{
   border-bottom: 1px solid #567BA8;
   padding: 20px;
   font-size: 24px;
+  width: 160%;
 }
 
 .header {
@@ -141,7 +143,6 @@ label{
   display: flex;
   justify-content: flex-start;
   flex: 0 0 300px;
-  padding-top: 140px;
 }
 
 button {
