--- a/src/App.css
+++ b/src/App.css
@@ -85,8 +85,10 @@ label{
 
 #mainHeader {
   display:flex;
+  justify-content: center;
+
   background-color: #b8e0d2;
-  width: 150%;
+  width: 100%;
   height: 70px;
 
   position: fixed;
@@ -250,16 +252,29 @@ label{
   padding: 5px;
 }
 
-#dropDownContainer {
+#dropDownButton {
   border:none;
   background-color: transparent;
-
-  padding: 15px;
 }
 
-#mainDropDown {
-  height: 30px;
-  width: 30px;
+#dropDownImage {
+  width: 60px;
+  height: 60px;
+  padding-right: 120px;
 
   cursor:pointer;
+}
+
+#dropDownContent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  padding: 10px;
+  margin-top: 6px;
+  background-color: #FFEEE6;
+  font-size: 17px;
+  color: #355070;
+
+  list-style-type: "*";
 }
