--- a/src/App.css
+++ b/src/App.css
@@ -107,12 +107,15 @@ label{
 
   display: flex;
   align-items: center;
+  flex-shrink: 0;
 }
 
 #mainHeaderIcon {
   height: 50px;
   width: 50px;
   padding: 10px;
+  padding-left: 80px;
+
 }
 
 #sectionHeader {
@@ -197,8 +200,6 @@ label{
   display: inline-block;
 }
 
-
-
 .tooltip {
   background-color: #555;
   color: #fff;
@@ -263,6 +264,9 @@ label{
   padding-right: 120px;
 
   cursor:pointer;
+  position:fixed;
+  top: 10px;
+  left: 10px;
 }
 
 #dropDownContent {
@@ -271,12 +275,16 @@ label{
   align-items: flex-start;
 
   padding: 10px;
-  margin-top: 6px;
+  margin-top: 70px;
   background-color: #FFEEE6;
   font-size: 17px;
   color: #355070;
 
-  list-style-type: "*";
+  z-index: 10000;
+
+  position: fixed;
+  top: 0px;
+  left: 10px;
 }
 
 #dropDownContent a:hover {
