begin work on card facades

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,8 @@ label{
   position: sticky;
   top: 0;
   z-index: 12;
+
+  border-bottom: 1px solid #355070;
 }
 
 #mainHeader {
@@ -134,10 +136,9 @@ label{
 
   color: #567BA8;
   background-color: #D8F3F5;
-  border-bottom: 1px solid #567BA8;
   padding: 20px;
   font-size: 24px;
-  width: 160%;
+  width:100%;
 }
 
 .header {
@@ -170,13 +171,14 @@ label{
 .content {
   width: 300px;
   min-height: 110vh;
-  margin-top: 10px;
   padding-bottom: 100px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 0 0 300px;
+
+  border-right: 1px solid #b8e0d2;
 }
 
 #deletecard {
@@ -236,7 +238,7 @@ label{
   justify-content: center;
 }
 
-#mock_card {
+.facadeCard {
   height: 100px;
   width: 190px;
   padding: 5px;
@@ -245,9 +247,10 @@ label{
   border: 5px solid #d1cfe2;
 
   display: flex;
+  cursor: grab;
 }
 
-#cardIcon{
+#facadeCardIcon{
   height: 50px;
   width: 50px;
   padding: 5px;
