changed facade display

--- a/src/App.css
+++ b/src/App.css
@@ -298,12 +298,21 @@ label{
   display: flex;
 }
 
+#facadeCardInfo {
+  display: flex;
+  flex-direction: column;
+}
+
 #facadeCompanyName {
   font-weight: 100;
   font-size: 12px;
   color: #4a6153;
+  padding-top: 5px;
 
-  overflow: hidden;
+  /* width: 115px;
+  height: 20px;
+
+  overflow: auto; */
 }
 
 #facadeJobTitle {
@@ -311,7 +320,15 @@ label{
   font-size: 16px;
   color: #4a6153;
 
-  overflow: hidden;
+  width: 110px;
+  height: 60px;
+
+  overflow: auto;
+}
+
+#facadeFooter {
+  display: flex;
+  padding-left: 10px;
 }
 
 #facadeEditImage {
