--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   background-color:#D8F3F5;
-  width: 115%;
+  width: 2140px;
 }
 
 div, input, textarea {
@@ -46,6 +46,10 @@ div, input, textarea {
   border-radius: 5px;
   cursor: pointer;
 
+}
+
+#submitButton button:hover {
+  opacity: 75%;
 }
 
 input {
@@ -106,7 +110,7 @@ label{
   top: 0;
   z-index: 12;
 
-  /* width: 150%;  */
+  width: 2122px; 
 
   border-bottom: 1px solid #355070;
 }
@@ -157,7 +161,7 @@ label{
   display: flex;
   flex-direction: column;
 
-  width: 150%;
+  width:2140px;
   height: 70px;
 }
 
@@ -168,7 +172,7 @@ label{
   background-color: #D8F3F5;
   padding: 20px;
   font-size: 24px;
-  width:100%;
+  width: 2140px;
 }
 
 .header {
@@ -303,18 +307,6 @@ label{
   flex-direction: column;
 }
 
-#facadeCompanyName {
-  font-weight: 100;
-  font-size: 12px;
-  color: #4a6153;
-  padding-top: 5px;
-
-  /* width: 115px;
-  height: 20px;
-
-  overflow: auto; */
-}
-
 #facadeJobTitle {
   font-weight: 500;
   font-size: 16px;
@@ -329,6 +321,18 @@ label{
 #facadeFooter {
   display: flex;
   padding-left: 10px;
+}
+
+#facadeCompanyName {
+  font-weight: 100;
+  font-size: 12px;
+  color: #4a6153;
+  padding-top: 5px;
+
+  height: 15px;
+  width: 150px;
+
+  overflow: hidden;
 }
 
 #facadeEditImage {
